--- a/package.json
+++ b/package.json
@@ -9,13 +9,36 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
+    "@react-native-async-storage/async-storage": "1.17.11",
+    "@react-navigation/bottom-tabs": "^6.5.7",
+    "@react-navigation/drawer": "^6.6.2",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
+    "@react-navigation/stack": "^6.3.16",
+    "@reduxjs/toolkit": "^1.9.3",
+    "Base64": "^1.2.0",
+    "axios": "^1.3.4",
     "expo": "~48.0.6",
+    "expo-barcode-scanner": "~12.3.2",
+    "expo-print": "^12.2.1",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
-    "react-native": "0.71.3"
+    "react-native": "0.71.4",
+    "react-native-country-picker-modal": "^2.0.0",
+    "react-native-dotenv": "^3.4.8",
+    "react-native-gesture-handler": "~2.9.0",
+    "react-native-qrcode-svg": "^6.2.0",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
+    "react-native-svg": "13.4.0",
+    "react-qr-code": "^2.0.11",
+    "react-redux": "^8.0.5",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "dotenv": "^16.0.3"
   },
   "private": true
 }
