--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.3.4",
     "expo": "~48.0.6",
     "expo-barcode-scanner": "~12.3.2",
+    "expo-media-library": "~15.2.3",
     "expo-print": "^12.2.1",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
@@ -32,6 +33,7 @@
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-svg": "13.4.0",
+    "react-native-view-shot": "^3.6.0",
     "react-qr-code": "^2.0.11",
     "react-redux": "^8.0.5",
     "redux-persist": "^6.0.0"
