--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "@react-navigation/native-stack": "^6.9.12",
     "@react-navigation/stack": "^6.3.16",
     "@reduxjs/toolkit": "^1.9.3",
-    "Base64": "^1.2.0",
     "axios": "^1.3.4",
+    "Base64": "^1.2.0",
     "expo": "~48.0.6",
     "expo-barcode-scanner": "~12.3.2",
     "expo-media-library": "~15.2.3",
@@ -29,6 +29,7 @@
     "react-native-country-picker-modal": "^2.0.0",
     "react-native-dotenv": "^3.4.8",
     "react-native-gesture-handler": "~2.9.0",
+    "react-native-modal": "^13.0.1",
     "react-native-qrcode-svg": "^6.2.0",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
