--- a/package.json
+++ b/package.json
@@ -17,13 +17,14 @@
     "@react-navigation/native-stack": "^6.9.12",
     "@react-navigation/stack": "^6.3.16",
     "@reduxjs/toolkit": "^1.9.3",
-    "Base64": "^1.2.0",
     "axios": "^1.3.4",
+    "Base64": "^1.2.0",
     "expo": "~48.0.6",
     "expo-barcode-scanner": "~12.3.2",
     "expo-media-library": "~15.2.3",
     "expo-print": "^12.2.1",
     "expo-status-bar": "~1.4.4",
+    "moment": "^2.29.4",
     "react": "18.2.0",
     "react-native": "0.71.4",
     "react-native-country-picker-modal": "^2.0.0",
